--- a/Explorer/src/app/feature-modules/user/customer-registration/customer-registration.component.html
+++ b/Explorer/src/app/feature-modules/user/customer-registration/customer-registration.component.html
@@ -1,94 +1,128 @@
 <form [formGroup]="registrationForm" (ngSubmit)="register()">
   <div>
-    <mat-form-field>
-      <mat-label>Name</mat-label>
-      <input matInput formControlName="firstName" type="text" />
-      <mat-error
-        *ngIf="registrationForm.get('firstName')?.hasError('required')"
-      >
-        Name is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Last Name</mat-label>
-      <input matInput formControlName="lastName" type="text" />
-      <mat-error *ngIf="registrationForm.get('lastName')?.hasError('required')">
-        Last name is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email" type="text" />
-      <mat-error *ngIf="registrationForm.get('email')?.hasError('required')">
-        Email is required!
-      </mat-error>
-      <mat-error *ngIf="registrationForm.get('email')?.hasError('email')">
-        Invalid email format!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>User Name</mat-label>
-      <input matInput formControlName="userName" type="text" />
-      <mat-error *ngIf="registrationForm.get('userName')?.hasError('required')">
-        Username is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Password</mat-label>
-      <input matInput formControlName="password" type="password" />
-      <mat-error *ngIf="registrationForm.get('password')?.hasError('required')">
-        Password is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Confirm password:</mat-label>
-      <input matInput formControlName="confirmPassword" type="password" />
-      <mat-error
-        *ngIf="
-          registrationForm.get('confirmPassword')?.hasError('PasswordNoMatch')
-        "
-        >Passwords dont match!</mat-error
-      >
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Country</mat-label>
-      <input matInput formControlName="country" type="text" />
-      <mat-error *ngIf="registrationForm.get('country')?.hasError('required')">
-        Country is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>City</mat-label>
-      <input matInput formControlName="city" type="text" />
-      <mat-error *ngIf="registrationForm.get('city')?.hasError('required')">
-        City is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Number</mat-label>
-      <input matInput formControlName="number" type="text" />
-      <mat-error *ngIf="registrationForm.get('number')?.hasError('required')">
-        Number is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Occupation</mat-label>
-      <input matInput formControlName="occupation" type="text" />
-      <mat-error
-        *ngIf="registrationForm.get('occupation')?.hasError('required')"
-      >
-        Occupation is required!
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Company Info</mat-label>
-      <input matInput formControlName="companyInfo" type="text" />
-      <mat-error
-        *ngIf="registrationForm.get('companyInfo')?.hasError('required')"
-      >
-        Company info is required!
-      </mat-error>
-    </mat-form-field>
+    <div class="row-container">
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Name</mat-label>
+          <input matInput formControlName="firstName" type="text" />
+          <mat-error
+            *ngIf="registrationForm.get('firstName')?.hasError('required')"
+          >
+            Name is required!
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Last Name</mat-label>
+          <input matInput formControlName="lastName" type="text" />
+          <mat-error
+            *ngIf="registrationForm.get('lastName')?.hasError('required')"
+          >
+            Last name is required!
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div>
+      <mat-form-field class="one-item-container">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" type="text" />
+        <mat-error *ngIf="registrationForm.get('email')?.hasError('required')">
+          Email is required!
+        </mat-error>
+        <mat-error *ngIf="registrationForm.get('email')?.hasError('email')">
+          Invalid email format!
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="row-container">
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Password(At least 8 characters)</mat-label>
+          <input matInput formControlName="password" type="password" />
+          <mat-error
+            *ngIf="registrationForm.get('password')?.hasError('required')"
+          >
+            Password is required!
+          </mat-error>
+          <mat-error
+            *ngIf="registrationForm.get('password')?.hasError('minlength')"
+          >
+            Password must be min 8 characters!
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Confirm password:</mat-label>
+          <input matInput formControlName="confirmPassword" type="password" />
+          <mat-error
+            *ngIf="
+              registrationForm
+                .get('confirmPassword')
+                ?.hasError('PasswordNoMatch')
+            "
+            >Passwords dont match!</mat-error
+          >
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row-container">
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Country</mat-label>
+          <input matInput formControlName="country" type="text" />
+          <mat-error
+            *ngIf="registrationForm.get('country')?.hasError('required')"
+          >
+            Country is required!
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>City</mat-label>
+          <input matInput formControlName="city" type="text" />
+          <mat-error *ngIf="registrationForm.get('city')?.hasError('required')">
+            City is required!
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+    <div>
+      <mat-form-field class="one-item-container">
+        <mat-label>Number</mat-label>
+        <input matInput formControlName="number" type="text" />
+        <mat-error *ngIf="registrationForm.get('number')?.hasError('required')">
+          Number is required!
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="row-container">
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Occupation</mat-label>
+          <input matInput formControlName="occupation" type="text" />
+          <mat-error
+            *ngIf="registrationForm.get('occupation')?.hasError('required')"
+          >
+            Occupation is required!
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="one-item-container">
+        <mat-form-field>
+          <mat-label>Company Info</mat-label>
+          <input matInput formControlName="companyInfo" type="text" />
+          <mat-error
+            *ngIf="registrationForm.get('companyInfo')?.hasError('required')"
+          >
+            Company info is required!
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
     <button color="primary" type="submit" mat-raised-button>Register</button>
   </div>
 </form>
