--- a/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.html
+++ b/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.html
@@ -1,31 +1,43 @@
-<div class="available-company-container" *ngIf="companies">
-  <div class="company-container" *ngFor="let company of companies">
-    <h2>{{ company.name }}</h2>
-    <p><strong>Adress:</strong>{{ company.adress }}</p>
-    <p><strong>Description:</strong>{{ company.description }}</p>
+<div>
+  <div class="search-container">
+    <input type="text" class="search-input" placeholder="Search name or address..." [(ngModel)]="searchValue" (ngModelChange)="onSearchChange()">
+    <button class="search-button">Search</button>
+    <label for="gradeSelect">Select Grade:</label>
+    <select id="gradeSelect" [(ngModel)]="selectedGrade" (change)="onGradeChange()">
+      <option value="5">>5</option>
+      <option value="6">>6</option>
+      <option value="7">>7</option>
+      <option value="8">>8</option>
+      <option value="9">>9</option>
+      <option value="10">10</option>
+    </select>
+  </div>
+  <div>
 
-    <div
-      *ngIf="
-        company.equipmentSet && company.equipmentSet.length > 0;
-        else noEquipment
-      "
-    >
-      <h3><strong>Equipment:</strong></h3>
-      <ul>
-        <li
-          *ngFor="let equipment of company.equipmentSet"
-          class="equipment-item"
-        >
-          <strong>Name:</strong>{{ equipment.name }}<br />
-          <strong>Description</strong> {{ equipment.description }}<br />
-          <strong>Status</strong>{{ equipment.status }}<br />
-        </li>
-      </ul>
+  <div class="available-company-container" *ngIf="companies">
+    <div class="company-container" *ngFor="let company of filteredCompanies">
+      <h2>{{ company.name }}</h2>
+      <p><strong>Adress:</strong>{{ company.adress }}</p>
+      <p><strong>Description:</strong>{{ company.description }}</p>
+  
+      <div *ngIf="
+          company.equipmentSet && company.equipmentSet.length > 0;
+          else noEquipment
+        ">
+        <h3><strong>Equipment:</strong></h3>
+        <ul>
+          <li *ngFor="let equipment of company.equipmentSet" class="equipment-item">
+            <strong>Name:</strong>{{ equipment.name }}<br />
+            <strong>Description</strong> {{ equipment.description }}<br />
+            <strong>Status</strong>{{ equipment.status }}<br />
+          </li>
+        </ul>
+      </div>
+      <ng-template #noEquipment>
+        <h3><strong>Equipment:</strong></h3>
+        <br />
+        Coming soon!
+      </ng-template>
     </div>
-    <ng-template #noEquipment>
-      <h3><strong>Equipment:</strong></h3>
-      <br />
-      Coming soon!
-    </ng-template>
   </div>
 </div>
