--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
@@ -25,6 +25,9 @@
         <div class="info-item">
             <strong>Company Info:</strong> <span>{{ customer.companyInfo }}</span>
         </div>
+        <div class="info-item2">
+            <strong>Penalty points:</strong> <span>{{ penaltyPoints }}</span>
+        </div>
     </div>
     <mat-icon class="edit" (click)="editProfile()">edit</mat-icon>
 </div>
