--- a/Explorer/src/app/feature-modules/equipment/all-equipment-preview/all-equipment-preview.component.html
+++ b/Explorer/src/app/feature-modules/equipment/all-equipment-preview/all-equipment-preview.component.html
@@ -27,6 +27,12 @@
         <p><strong>Type:</strong> {{ equipment.typeOfEquipment }}</p>
         <p><strong>Grade:</strong> {{ equipment.grade }}</p>
         <p><strong>Price:</strong> {{ equipment.price }}</p>
+
+        
+      
+        <button>Order now</button>
       </div>
     </div>
+
+    
 </div>
