--- a/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -5,7 +5,7 @@
             <button *ngIf="user && user.username === ''" color="accent" mat-raised-button [routerLink]="['login']">Login</button>
             <button *ngIf="user && user.username !== ''" color="accent" mat-raised-button (click)="onLogout()">Logout</button>
             <button color="primary" mat-raised-button [routerLink]="['home']">Home</button>
-            <button mat-raised-button [routerLink]="['profile']">Profile</button>
+            <button mat-raised-button [routerLink]="['customerProfile']">Profile</button>
             <button *ngIf="user && user.role === 'administrator'"color="primary" mat-raised-button [routerLink]="['equipment']">Manage equipment</button>
         </div>
     </div>
