Everything before Reservation

--- a/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
+++ b/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
@@ -1,29 +1,55 @@
-<div  *ngIf="company">
-    <div >
-      <h2>{{ company.name }}</h2>
-      <p><strong>Adress:</strong>{{ company.adress }}</p>
-      <p><strong>Description:</strong>{{ company.description }}</p>
-      <p><strong>Grade:</strong>{{ company.grade }}</p>
-      <div *ngIf="
-          company.equipmentSet && company.equipmentSet.length > 0;
-          else noEquipment
-        ">
-        <h3><strong>Equipment:</strong></h3>
-        <ul>
-          <li *ngFor="let equipment of company.equipmentSet" class="equipment-item">
-            <strong>Name:</strong>{{ equipment.name }}<br />
-            <strong>Description:</strong> {{ equipment.description }}<br />
-            <strong>Type:</strong> {{ equipment.typeOfEquipment }}<br />
-            <strong>Grade:</strong> {{ equipment.grade }}<br />
-            <strong>Price:</strong> {{ equipment.price }}<br />
-          </li>
-        </ul>
-      </div>
-      <ng-template #noEquipment>
-        <h3><strong>Equipment:</strong></h3>
-        <br />
-        Coming soon!
-      </ng-template>
-    </div>
+<div *ngIf="company" class="company-info">
+  <div class="company-details">
+    <h2>{{ company.name }}</h2>
+    <p><strong>Address:</strong> {{ company.adress }}</p>
+    <p><strong>Description:</strong> {{ company.description }}</p>
+    <p><strong>Grade:</strong> {{ company.grade }}</p>
   </div>
-  <div>
+    <div *ngIf="!isDone; else nextPart">
+      <div *ngIf="company.equipmentSet && company.equipmentSet.length > 0; else noEquipment" class="equipment-list">
+        <h3><strong>Equipments:</strong></h3>
+        <input type="text" class="search-input" placeholder="🔍Search name..." [(ngModel)]="searchValue" (ngModelChange)="onSearchChange()">
+        
+        <div class="equipment-cards">
+          <div *ngFor="let equipment of filteredEquipments" class="equipment-card" (click)="selectEquipment(equipment)" [ngClass]="{'selected': isSelected(equipment)}" >
+            <div class="equipment-header">
+              <h3>{{ equipment.name }}</h3>
+            </div>
+            <div class="equipment-details">
+              <p><strong>Description:</strong> {{ equipment.description }}</p>
+              <p><strong>Type:</strong> {{ equipment.typeOfEquipment }}</p>
+              <p class="grade-and-price"><strong>📈Grade:</strong> {{ equipment.grade }} | <strong>💰Price:</strong> {{ equipment.price }}</p>
+            </div>
+          </div>
+          
+        <button class="button"  (click)="doneChoosing()">Done</button>
+        </div>
+      </div>
+    </div>
+    
+
+    <ng-template #noEquipment>
+      <h3><strong>Equipment:</strong></h3>
+      <br />
+      Coming soon!
+    </ng-template>
+
+    <ng-template #nextPart>
+      <h2>AVAILABLE DATES:</h2>
+      <div class="date-cards-container">
+        <div class="date-card" *ngFor="let date of availableDates">
+          <div class="card-content">
+            <input type="radio" name="selectedDate" [(ngModel)]="selectedDate" [value]="date" class="custom-radio" />
+            <h3>📆 Date: {{ formatDateAndTime(date.startTime).date }}</h3>
+            <h3>⏰ Time: {{ formatDateAndTime(date.startTime).time }}</h3>
+          </div>
+        </div>
+        <button class="button3" (click)="addDate()">Choose other date</button>
+        <button class="button2" (click)="reserve()">Reserve</button>
+      </div>
+    </ng-template>
+    
+    
+    
+    
+</div>
