--- a/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
+++ b/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
@@ -2,6 +2,7 @@
     <div >
       <h2>{{ company.name }}</h2>
       <p><strong>Adress:</strong>{{ company.adress }}</p>
+      
       <p><strong>Description:</strong>{{ company.description }}</p>
       <p><strong>Grade:</strong>{{ company.grade }}</p>
       <div *ngIf="
@@ -9,13 +10,24 @@
           else noEquipment
         ">
         <h3><strong>Equipment:</strong></h3>
+        
+        <input type="text" class="search-input" placeholder="Search equipment..." [(ngModel)]="equipmentSearchValue" (ngModelChange)="onEquipmentSearchChange()">
+        <button mat-icon-button color="primary" (click)="showEquipmentSelect()" >
+          <mat-icon>add</mat-icon>
+        </button>
         <ul>
-          <li *ngFor="let equipment of company.equipmentSet" class="equipment-item">
-            <strong>Name:</strong>{{ equipment.name }}<br />
-            <strong>Description:</strong> {{ equipment.description }}<br />
-            <strong>Type:</strong> {{ equipment.typeOfEquipment }}<br />
-            <strong>Grade:</strong> {{ equipment.grade }}<br />
-            <strong>Price:</strong> {{ equipment.price }}<br />
+          <li *ngFor="let equipment of filteredEquipment || company.equipmentSet" class="equipment-item">
+            <strong>Name: </strong>{{ equipment.name }}<br />
+            <strong>Description: </strong> {{ equipment.description }}<br />
+            <strong>Type: </strong> {{ equipment.typeOfEquipment }}<br />
+            <strong>Grade: </strong> {{ equipment.grade }}<br />
+            <strong>Price: </strong> {{ equipment.price }}<br />
+            <button mat-icon-button color="warn" (click)="deleteEquipment(equipment)">
+              <mat-icon>delete</mat-icon>
+            </button>
+            <button mat-icon-button color="primary" (click)="openUpdateEquipmentForm(equipment)">
+              <mat-icon>edit</mat-icon>
+            </button>
           </li>
         </ul>
       </div>
@@ -24,6 +36,40 @@
         <br />
         Coming soon!
       </ng-template>
+      <div *ngIf="shouldRenderEquipmentSelect">
+        <h3><strong>Add Equipment:</strong></h3>
+        
+        <!-- Add the listbox for equipment selection -->
+        <select [(ngModel)]="selectedEquipmentId" class="equipment-listbox">
+          <option *ngFor="let equipment of availableEquipment" [value]="equipment.id">
+            {{ equipment.name }}
+          </option>
+        </select>
+        
+        <!-- Add the "Add" button to call the equipmentService method -->
+        <button mat-raised-button color="primary" (click)="addEquipment()">Add</button>
+      </div>
+    
+      <xp-equipment-form *ngIf="shouldRenderEquipmentForm" (updateEquipmentClicked)="updateEquipmentClicked()" [equipment]="equipmentForUpdate" [company]="company" ></xp-equipment-form>
+      
+      
+      <div *ngIf="
+        company.adminsSet && company.adminsSet.length > 0;
+        else noAdmins">
+        <h3><strong>Company Admins:</strong></h3>
+        <ol>
+          <li *ngFor="let admin of company.adminsSet" class="admin-item">
+            <strong>First Name: </strong>{{ admin.firstName }}<br />
+            <strong>Last Name: </strong> {{ admin.lastName }}<br />
+          </li>
+        </ol>
+      </div>
+      <ng-template #noAdmins>
+        <h3><strong>Company has no admins currently!</strong></h3>
+      </ng-template>
+  
     </div>
-  </div>
-  <div>
+    <div class="map-frame">
+      <div id="leafletMap" class="map-wrap"></div>
+    </div>
+<div>
