--- a/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.html
+++ b/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.html
@@ -21,6 +21,9 @@
 
   <div class="available-company-container" *ngIf="companies">
     <div class="company-container" *ngFor="let company of filteredCompanies">
+      <button (click)="onReserve(company)" color="primary" mat-icon-button>
+        <mat-icon>add_shopping_cart</mat-icon>
+      </button>
       <h2>{{ company.name }}</h2>
       <p><strong>Adress:</strong>{{ company.adress }}</p>
       <p><strong>Description:</strong>{{ company.description }}</p>
