--- a/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -18,7 +18,7 @@
       >
         Logout
       </button>
-      <button color="primary" mat-raised-button [routerLink]="['home']">
+      <button color="primary" mat-raised-button [routerLink]="['']">
         Home
       </button>
       <button mat-raised-button [routerLink]="['customerProfile']">
