--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="customer" class="customer-card">
+<div *ngIf="customer" >
+    <div class="customer-card">
     <img src="../../../../assets/user.png" height="100px" alt="user info"/>
     <div class="customer-info">
         <div class="info-item">
@@ -29,5 +30,15 @@
             <strong>Penalty points:</strong> <span>{{ penaltyPoints }}</span>
         </div>
     </div>
-    <mat-icon class="edit" (click)="editProfile()">edit</mat-icon>
+        <mat-icon class="edit" (click)="editProfile()">edit</mat-icon>
+    </div>
+    <h2>Reservations:</h2>
+    <div class="date-cards-container">
+    <div class="date-card"  *ngFor="let reserv of reservations">
+        <div class="card-content">
+            <h3>📆 Date: {{ formatDateAndTime(reserv.dateTime).date }}</h3>
+            <h3>⏰ Time: {{ formatDateAndTime(reserv.dateTime).time }}</h3>
+          </div>
+    </div>
+    </div>
 </div>
