--- a/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.css
+++ b/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.css
@@ -91,6 +91,28 @@ li.equipment-item {
   height: 30px;
  }
 
+ #sortCriteriumSelect{
+  margin-left: 30px;
+  width:fit-content;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 30px;
+ }
+
+ #sortReservationSelect{
+  margin-left: 30px;
+  width:fit-content;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 30px;
+ }
+
  .formAdding {
   display: flex;
   flex-wrap: wrap;
@@ -99,3 +121,20 @@ li.equipment-item {
   gap: 30px;
   padding: 30px;
  }
+
+ .past-reservation-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.reservation-item {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+}
+
+h3{
+  text-align: center;
+}
+
