--- a/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.html
+++ b/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.html
@@ -14,6 +14,13 @@
       <option value="E">E</option>
       <option value="F">F</option>
     </select>
+    <select id="sortCriteriumSelect" [(ngModel)]="sortCriteriumSelected" (change)="onCriteriumChange()">
+      <option *ngIf="!sortCriteriumSelected" value="" disabled selected>Select sort parameter</option>
+      <option value="sortName">Company name A-Z</option>
+      <option value="sortCity">City A-Z</option>
+      <option value="sortGradeH">Grade (from highest)</option>
+      <option value="sortGradeL">Grade (from lowest)</option>
+    </select>
   </div>
   <div>
 
@@ -56,10 +63,26 @@
       </button>
     </div>
   </div>
-  <div>
-    
-
-    
+  <h3>Past reservations</h3>
+  <select id="sortReservationSelect" [(ngModel)]="sortReservationCriterium" (change)="onSortReservationChange()">
+    <option *ngIf="!sortReservationCriterium" value="" disabled selected>Select sort parameter</option>
+    <option value="sortDateN">Reservation date (from newest)</option>
+    <option value="sortDateO">Reservation date (from oldest)</option>
+    <option value="sortPriceH">Price (from highest)</option>
+    <option value="sortPriceL">Price (from lowest)</option>
+    <option value="sortDurationL">Duration (from longest)</option>
+    <option value="sortDurationS">Duration (from shortest)</option>
+  </select>
+  <div class="past-reservation-container" *ngIf="isCustomer">
+    <div class="pastReservations-container" *ngFor="let res of pastReservations">
+      <div class="reservation-item">
+        <p><strong>📆 Date:</strong> {{ formatDateAndTime(res.dateTime).date }}</p>
+        <p><strong>⏰ Time: </strong>{{ formatDateAndTime(res.dateTime).time }}</p>
+        <p><strong>Num of days:</strong> {{ res.duration }}</p>
+        <p><strong>Grade:</strong> {{ res.grade }}</p>
+      </div>
+    </div>
   </div>
+  
 
 </div>
