--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
@@ -63,3 +63,32 @@ span {
     font-weight: 1000;
   }
   
+  
+ .sortReservationSelect{
+  margin-left: 30px;
+  width:fit-content;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 30px;
+ }
+
+ 
+ .past-reservation-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.reservation-item {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  width: 200px;
+}
+
+h3{
+  text-align: center;
+}
+
