--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.css
@@ -1,3 +1,9 @@
+
+.column{
+  display: flex;
+  flex-direction: row;
+}
+
 .customer-card {
     max-width: 400px;
     margin: 0 auto;
@@ -15,6 +21,7 @@
 .customer-info {
     text-align: center;
 }
+
 
 .info-item {
     margin-bottom: 10px;
@@ -63,6 +70,10 @@ span {
     font-weight: 1000;
   }
   
+  .column{
+    display: flex;
+    flex-direction: column;
+  }
   
  .sortReservationSelect{
   margin-left: 30px;
