--- a/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
+++ b/Explorer/src/app/feature-modules/user/customer-profile/customer-profile.component.html
@@ -1,11 +1,6 @@
 <div *ngIf="customer">
   <div class="customer-card">
     <img src="../../../../assets/user.png" height="100px" alt="user info" />
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> feat/userProfileAll
     <div *ngIf="customer" class="customer-info">
       <div class="info-item">
         <strong>First Name:</strong> <span>{{ customer.firstName }}</span>
@@ -37,25 +32,15 @@
       </div>
     </div>
     <mat-icon class="edit" (click)="editProfile()">edit</mat-icon>
-<<<<<<< HEAD
 
-    
+    <div class="uploadQR">
+      <label>Upload QR code here and pick up reservation!</label>
+      <input  type="file" (change)="handleFileSelect($event)" accept="image/*">
+  </div>
+  
   </div>
 
-  <h2 style="text-align: center;">All reservations</h2>
-  <select class="sortReservationSelect" [(ngModel)]="sortReservationCriterium" (change)="onSortReservationChange()">
-    <option *ngIf="!sortReservationCriterium" value="" disabled selected>Select sort parameter</option>
-    <option value="sortDateN">Reservation date (from newest)</option>
-    <option value="sortDateO">Reservation date (from oldest)</option>
-    <option value="sortPriceH">Price (from highest)</option>
-    <option value="sortPriceL">Price (from lowest)</option>
-    <option value="sortDurationL">Duration (from longest)</option>
-    <option value="sortDurationS">Duration (from shortest)</option>
-  </select>
-=======
-    <!--mat-icon class="report_problem" (click)="makeComplaint()">report_problem</mat-icon-->
-  </div>
->>>>>>> feat/userProfileAll
+ 
 
   
 
@@ -78,28 +63,6 @@
 </select>
 
 
-<<<<<<< HEAD
-  <div class="past-reservation-container" *ngIf="isCustomer">
-    <div class="pastReservations-container" *ngFor="let res of allReservations">
-      <div class="reservation-item"  [ngStyle]="{'background-color': res.isPast ? '#f7564a' : '#8de675'}">
-        <p><strong>📆 Date:</strong> {{ formatDateAndTime(res.dateTime).date }}</p>
-        <p><strong>⏰ Time: </strong>{{ formatDateAndTime(res.dateTime).time }}</p>
-        <p><strong>Duration:</strong> {{ res.duration }}</p>
-        <p><strong>Grade:</strong> {{ res.grade }}</p>
-        <p *ngIf="res.status === 'PickedUp'">
-          <strong>Reservation picked up!</strong>
-        </p>
-
-        <p *ngIf="res.status === 'Cancelled'">
-          <strong>Reservation cancelled!</strong>
-        </p>
-        
-        
-        <!-- Display "Cancel Reservation" button only for past reservations -->
-        <button *ngIf="!res.isPast && res.isCancelEnabled" (click)="cancelReservation(res)">Cancel Reservation</button>
-        <button *ngIf="!res.isPending" (click)="seeQR(res)">▌│█║▌║▌║See QR</button>
-      </div>
-=======
 
 
 <div class="past-reservation-container" *ngIf="isCustomer">
@@ -113,7 +76,6 @@
       <!-- Display "Cancel Reservation" button only for past reservations -->
       <button *ngIf="!res.isPast && res.isCancelEnabled" (click)="cancelReservation(res)">Cancel Reservation</button>
       <button *ngIf="!res.isPending" (click)="seeQR(res)">▌│█║▌║▌║See QR</button>
->>>>>>> feat/userProfileAll
     </div>
 
     
@@ -137,6 +99,4 @@
 
     <button type="submit">Submit Complaint</button>
   </form>
-</div>
-
 </div>
