--- a/Explorer/src/app/feature-modules/company/company-reserve/company-reserve.component.html
+++ b/Explorer/src/app/feature-modules/company/company-reserve/company-reserve.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="company" class="company-info">
     <div class="company-details">
       <h2>{{ company.name }}</h2>
-      <p><strong>Address:</strong> {{ company.adress }}</p>
+      <p><strong>Location:</strong> {{ company.locationDto }}</p>
       <p><strong>Description:</strong> {{ company.description }}</p>
       <p><strong>Grade:</strong> {{ company.grade }}</p>
     </div>
