--- a/Explorer/src/app/feature-modules/company/company-form/company-form.component.html
+++ b/Explorer/src/app/feature-modules/company/company-form/company-form.component.html
@@ -7,8 +7,18 @@
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Adress</mat-label>
-            <input matInput formControlName="adress" type="text" />
+        <mat-label>Address</mat-label>
+        <input matInput formControlName="address" type="text" />
+      </mat-form-field>
+      
+      <mat-form-field>
+        <mat-label>City</mat-label>
+        <input matInput formControlName="city" type="text" />
+      </mat-form-field>
+      
+      <mat-form-field>
+        <mat-label>Country</mat-label>
+        <input matInput formControlName="country" type="text" />
       </mat-form-field>
   
       <mat-form-field>
